[gd_scene format=3 uid="uid://8q8b4myxr24s"]

[ext_resource type="Script" uid="uid://wgiryvwdvmdx" path="res://scripts/android_chat.gd" id="1_a1jlk"]
[ext_resource type="Resource" uid="uid://cbwv2aca6mlyk" path="res://resources/account_default.tres" id="2_nkucq"]
[ext_resource type="PackedScene" uid="uid://cypn2o603pvut" path="res://components/message.tscn" id="3_lnh72"]
[ext_resource type="StyleBox" uid="uid://cft7dqmsgmeyd" path="res://resources/chatbox_style_box_flat.tres" id="3_nkucq"]
[ext_resource type="StyleBox" uid="uid://b08ksuossydhb" path="res://resources/sidebar_style_box_flat.tres" id="3_u48mk"]
[ext_resource type="PackedScene" uid="uid://betypgjdm3f10" path="res://components/countdown_timer.tscn" id="6_u1aqf"]

[sub_resource type="Theme" id="Theme_8i8ot"]
default_font_size = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4p48b"]
bg_color = Color(0.44136545, 0.44136554, 0.44136536, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="Control" type="Control" unique_id=948171427]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_8i8ot")
script = ExtResource("1_a1jlk")
current_account = ExtResource("2_nkucq")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1588786551]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=1144489323]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer" unique_id=70829691]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_u48mk")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer" unique_id=2146848493]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer" unique_id=1031606630]
layout_direction = 2
layout_mode = 2

[node name="FontScaleLabel" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" unique_id=214865725]
layout_mode = 2
text = "Font scale: "

[node name="FontScale" type="SpinBox" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" unique_id=1474390838]
layout_mode = 2
min_value = 0.5
max_value = 3.0
step = 0.1
value = 1.0

[node name="Chat" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=702941862]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="CountdownTimer" parent="MarginContainer/HBoxContainer/Chat" unique_id=1749171765 instance=ExtResource("6_u1aqf")]
layout_mode = 2
size_flags_horizontal = 8

[node name="ChatScroller" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Chat" unique_id=396590605]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3_nkucq")
follow_focus = true
horizontal_scroll_mode = 0

[node name="ChatBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Chat/ChatScroller" unique_id=1580663306]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" parent="MarginContainer/HBoxContainer/Chat/ChatScroller/ChatBox" unique_id=1054771256 instance=ExtResource("3_lnh72")]
layout_mode = 2

[node name="MsgEntry" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Chat" unique_id=1918737825]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="TextEdit" type="TextEdit" parent="MarginContainer/HBoxContainer/Chat/MsgEntry" unique_id=362965322]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_4p48b")
placeholder_text = "Enter your message..."

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Chat/MsgEntry" unique_id=888553850]
layout_mode = 2
text = "Send"

[connection signal="value_changed" from="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/FontScale" to="." method="_on_font_scale_value_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Chat/MsgEntry/Button" to="." method="_on_button_pressed"]
